--- a/beamercolorthemele2i.sty
+++ b/beamercolorthemele2i.sty
@@ -1,20 +1,18 @@
-\setbeamercolor{headline}{fg=niceblack,bg=azulunam}
-\setbeamercolor{footline}{fg=nicewhite, bg=azulunam}
+\setbeamercolor{headline}{fg=niceblack, bg=nicewhite}%bg=azulunam}
+\setbeamercolor{footline}{fg=nicewhite, bg=nicewhite}%bg=azulunam}
 \setbeamerfont{footline}{size=\large,series=\tt}
-\setbeamercolor{separation line}{bg=nicewhite}
+\setbeamercolor{separation line}{bg=azulunam}
 \setbeamercolor{title in headline}{fg=orounam}
-\setbeamercolor{author in headline}{fg=nicewhite}
-\setbeamercolor{institute in headline}{fg=nicewhite}
+\setbeamercolor{author in headline}{fg=azulunam}
+\setbeamercolor{institute in headline}{fg=azulunam}
 
-\setbeamercolor{framesubtitle}{fg=azulunam, bg=orounam}
-\setbeamercolor{author in head/foot}{fg=white, bg=orounam}
+\setbeamercolor{framesubtitle}{fg=orounam, bg=azulunam}
+\setbeamercolor{author in head/foot}{fg=azulunam, bg=orounam}
 \setbeamercolor{title in head/foot}{fg=nicewhite, bg=orounam}
 
-\setbeamercolor*{normal text}{fg=niceblack, bg=azulunam}
-\setbeamercolor*{block body}{bg=white,fg=black}
-\setbeamercolor*{block title}{fg=white,bg=orounam}
-\setbeamerfont{block title}{size=\large,series=\bf}
-\setbeamercolor{upper separation line head}{fg=white}
+\setbeamercolor*{normal text}{fg=niceblack, bg=nicewhite}%bg=azulunam}
+
+\setbeamercolor{upper separation line head}{fg=azulunam}
 
 \setbeamercolor*{example body}{fg=ta3aluminium,bg=black}
 \setbeamercolor*{example text}{fg=ta3aluminium,bg=black}
@@ -23,6 +21,7 @@
 %\setbeamercolor{alerted text}{fg=ta3gray}
 
 %\setbeamercolor{example text}{fg=taorange}
+
 \setbeamercolor{structure}{fg=azulunam}
 
 \setbeamertemplate{itemize items}[triangle]
