Adress Fab comments

--- a/poster.tex
+++ b/poster.tex
@@ -138,7 +138,7 @@
                   \label{fig:p1}\includegraphics[width=0.48\textwidth]{03}}\hfill
                 \subfloat[][]{
                   \label{fig:p2}\includegraphics[width=0.48\textwidth]{06}}\hfill
-                \caption{Visual evaluation of the goodness of fitting using Rician and Gaussian distribution.}
+                \caption{Visual evaluation of the goodness of fitting using Rician and Normal distribution.}
                 \label{fig:fitting}
               \end{figure}
 
@@ -191,7 +191,7 @@
               \vspace{1cm}
               \begin{itemize}
               \justifying
-              \item \acs{mri} data theoretically follows a Rayleigh distribution for a low \acs{snr} scenarios while it appears closer to a Gaussian distribution when the \ac{snr} increases~\cite{bernstein1989improved}.
+              \item \acs{mri} data theoretically follows a Rayleigh distribution for a low \acs{snr} scenario while it appears closer to a Gaussian distribution when the \ac{snr} increases~\cite{bernstein1989improved}.
               \item The Rician model better fits the data than the Gaussian model in terms of \acs{rms}.
               \end{itemize}
 
@@ -272,7 +272,7 @@
               \begin{itemize}
                 \justifying
               \item 3 Tesla whole body MRI scanner.
-              \item 17 patients manually segmented by experienced radiologist.
+              \item 17 volumes manually segmented by experienced radiologist.
               \item Publicly available at \texttt{http://visor.udg.edu/i2cvb/}.
               \end{itemize}
 
@@ -294,7 +294,7 @@
               
               \begin{itemize}
               \justifying
-              \item Rician normalization outperforms the other methods: \ac{auc} of $0.9974$ and $0.9824$ considering the full prostate and \ac{cap}, respectively.
+              \item Rician normalization outperforms the other methods: \acs{auc} of $0.9974$ and $0.9824$ considering the full prostate and \ac{cap}, respectively.
               \end{itemize}
 
             \end{block}
